1999-11-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* include/utils.h (class modal_dialog): Add member widget and
 	constructor and destructor.

	* lib/options.cc (act): Use member widget and avoid gtk_main.
	(quit): Just hide the widget.
	(~modal_dialog): New function.  Destroy the widget.
	(modal_dialog): Construct with no widget.

	* bin/main.cc (class clock_app): Add member dialog.
	(edit_options): Avoid local dialog instance.
	(~clock_app): Add save.
	(clock_app): Add initialization of dialog.

	* include/glclock.h (class glclock): Just move members.

1999-10-26  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* bin/main.cc (parse_options): Move long options to function
	local.
	(parse_options): Add `--no-options' option.
	(display_help): Add `--no-options' help text.
	(clock_app): Restore option only if !opt_no_options.

	* NEWS: Updated.

	* THANKS: Updated.

	* rglclock.1: Update documentation.

	* README: Update documentation.

	* profile.cc (save, restore): Add const to each CHAR in
	reinterpret_cast.

1999-08-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* lib/simple.c (draw_dial_disk): New function.
	(simple_draw_clock): Use draw_dial_disk and disable depth tests
	while drawing disks.
	(simple_init): #if-out depth test setting.

	* configure.in: Test deflate for -lz.

	* bin/main.cc (create_window): Add accel group.
	(class clock_app): Remove member accels.  Also change all users.

	* NEWS: Modified.

	* lib/clockoptions.cc (apply): Handle texture-mapping options.

	* include/glclock.h (class glclock): Add new member
	set_module_prop.

	* lib/Makefile.am (noinst_HEADERS): Added.

	* include/Makefile.am (noinst_HEADERS): Remove simple.h.

	* lib/simple.h: Moved from include.

	* lib/glclock.cc (handle_expose_event): Change the use of
	module::draw_clock.

	* lib/module.cc (prop, set_prop): New functions.
	(draw_clock): Remove argument.

	* include/module.h (class module): Add new members prop and
	set_prop.